.metadata/.plugins/org.eclipse.cdt.ui/atcoder_tutorial.build.log
21:01:03 **** インクリメンタル・ビルド of configuration Debug for project atcoder_tutorial ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.cpp" 
..\main.cpp: In function 'int main(int, char**)':
..\main.cpp:16:18: error: cast from 'char*' to 'int' loses precision [-fpermissive]
  n = (int) argv[1];
                  ^

21:01:04 ビルドに失敗しました。1 errors, 0 warnings. (経過 295ms)

